Proyecto funcional al tutorial
Todos los cambios realizados, listos para compartirlo junto al tutorial de PWAExperts.io.

--- a/Task-it/index.html
+++ b/Task-it/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>T@sk-it!</title>
-    <link rel="icon" type="image/png" href="taskit-icon-512.png">
+    <link rel="icon" type="image/png" href="images/taskit-icon-512.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/materialize.min.css">
