Wake Lock Sample code
This is a sample code written to join a PWAExperts.io article.

--- a/Wake-Lock-Sample/index.html
+++ b/Wake-Lock-Sample/index.html
@@ -12,7 +12,8 @@
     </head>
     <body>
         <h1>Wake Lock API</h1>
-        <p>Pausa o libera el autobloqueo de pantalla, pulsando el candado a continuación.</p>
+        <p>Pausa o libera el autobloqueo de pantalla, pulsando la imagen contigua.</p>
+        <p>Prueba la funcionalidad en computadoras o móviles configurando, previamente, el tiempo de bloqueo en el mínimo posible.</p>
         <div class="center">
             <img id="lock" src="images/unlocked.png" width="100%">
         </div>
