Media Session API for PWAExperts

--- a/Media Session API/index.html
+++ b/Media Session API/index.html
@@ -27,7 +27,7 @@
         <div style="text-align: center;">
             <h1>Audio API</h1>
             <br><br>
-            <img id="cover" src="cover/blank.jpg" alt="Music cover" width="300px" height="300px">
+            <img id="cover" src="cover/blank.png" alt="Music cover" width="300px" height="300px">
             <p id="label">No hay contenido en reproducción</p>
             <br><br>
             <button id="play" class="btn-floating blue darken-3 btn-large waves-effect waves-light"><i class="material-icons white-text">play_arrow</i></button>
