Media Session API for PWAExperts.io

--- a/Media Session API/index.html
+++ b/Media Session API/index.html
@@ -3,18 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>Audio API</title>
-        <link rel="icon" href="icons/ru-64.png">
+        <link rel="icon" href="icons/pwa-64.png">
         <meta name="apple-mobile-web-app-title" content="PWA">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
         <meta name="description" content="Author: Fernando Luna for the PWAExperts.io community, Music: The song could be an intellectual property by its own author, Category: Sample code for a tutorial programming article">
-        <link rel="apple-touch-icon" sizes="64x64" href="icons/ru-64.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="icons/ru-ios-120.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="icons/ru-ios-152.png">
-        <link rel="apple-touch-icon" sizes="167x167" href="icons/ru-ios-167.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="icons/ru-ios-180.png">
-        <link rel="apple-touch-icon" sizes="192x192" href="icons/ru-ios-192.png">
+        <link rel="apple-touch-icon" sizes="64x64" href="icons/pwa-64.png">
+        <link rel="apple-touch-icon" sizes="96x96" href="icons/pwa-96.png">
+        <link rel="apple-touch-icon" sizes="128x128" href="icons/pwa-128.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="icons/pwa-144.png">
+        <link rel="apple-touch-icon" sizes="192x192" href="icons/pwa-192.png">
+
         <link rel="manifest" href="manifest.json">
         <script src="upup.sw.min.js"></script>
         <script src="upup.js"></script>
