Media Session API

--- a/Media Session API/index.html
+++ b/Media Session API/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Audio API</title>
         <link rel="icon" href="icons/pwa-64.png">
+        <meta name="theme-color" content="#000000">
         <meta name="apple-mobile-web-app-title" content="PWA">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -14,7 +15,6 @@
         <link rel="apple-touch-icon" sizes="128x128" href="icons/pwa-128.png">
         <link rel="apple-touch-icon" sizes="144x144" href="icons/pwa-144.png">
         <link rel="apple-touch-icon" sizes="192x192" href="icons/pwa-192.png">
-
         <link rel="manifest" href="manifest.json">
         <script src="upup.sw.min.js"></script>
         <script src="upup.js"></script>
